# OzneInjector

./: CMakeLists.txt  README.md  build.sh  main.cpp
include/config/: Config.hpp
include/functions/gfx/: ChromaticNamePatcher.hpp
include/utils/: Memory.hpp  SysInfo.hpp
src/core/: Hook.cpp
src/functions/gfx/: ChromaticNamePatcher.cpp
src/utils/: Memory.cpp  SysInfo.cpp
